-Implement fule of five, inline, explicit etc

--- a/Generic Camera Server/Generic Camera Server.vcxproj
+++ b/Generic Camera Server/Generic Camera Server.vcxproj
@@ -152,7 +152,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\Library\libwebsockets-3.1.0\build\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>F:\Library\libwebsockets-3.1.0\build\lib;F:\Library\vcpkg\installed\x64-windows\lib;F:\Library\vcpkg\installed\x64-windows\lib\manual-link;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_world.lib;avformat.lib;avutil.lib;avcodec.lib;swscale.lib;Release\websockets_static.lib;ws2_32.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
